Update approved list via UI

--- a/approved_senders.json
+++ b/approved_senders.json
@@ -1,5 +1,144 @@
-{
-  "senders": [
-    "info@bayresistance.org"
-  ]
-}
+[
+  "info@bayresistance.org",
+  "info@sandyhookpromise.org",
+  "hello@tlfapparel.com",
+  "avzsqjlgjh@inklene.com",
+  "service@em.shopbop.com",
+  "grandinroad@grandinroad-email.com",
+  "info@dscc.org",
+  "backcountry@b.backcountry.com",
+  "service@icoice.com",
+  "nytdirect@nytimes.com",
+  "frontgate@frontgate-email.com",
+  "hello@from.hungryroot.com",
+  "support@email.masterclass.com",
+  "stream@newsletters.fubo.tv",
+  "bananarepublic@email.bananarepublic.ca",
+  "hello@emailer.spune.com",
+  "hello@adinaeden.com",
+  "lpmuymtztvqs@zogance.com",
+  "info@email3.pace-cme.org",
+  "info@ourrevolution.com",
+  "hi@12thtribe.com",
+  "shopbop@shopbop-mail.com",
+  "noreply@idrinkproducts.com",
+  "hello@breathe.calm.com",
+  "hello@mail.therabody.com",
+  "mario@email.mariobadescu.com",
+  "wauykdutvqeiu@againtrix.com",
+  "no-reply@e.siriusxm.com",
+  "mailer@mailer.dadadallas.com",
+  "dea_dcd@public.govdelivery.com",
+  "noreply@novoslabs.com",
+  "absurdlysoft@marinelayer.com",
+  "info@ringconcierge.com",
+  "eahmmendyfklj@ivinsyste.com",
+  "trivia@mail.wordstrivia.com",
+  "newsletter@toddsnyder.com",
+  "anthropologie@s.anthropologie.com",
+  "figs@email.wearfigs.com",
+  "newsletter@carrental8.com",
+  "sendhappy@urbanstems.com",
+  "cate@hulalandblog.com",
+  "reply@email.tgw.com",
+  "emails@songkick.com",
+  "hello@email.cariuma.com",
+  "press@usnn.com",
+  "inspirationsceramic@pb08.wixemails.com",
+  "aritzia@em.aritzia.com",
+  "friendupdates@facebookmail.com",
+  "reply@e.goodrx.com",
+  "info@woodencork.com",
+  "english-quora-digest@quora.com",
+  "info@e.elissaslotkin.org",
+  "hello@g.greenchef.com",
+  "noreply@e.economist.com",
+  "notification@bc.aloyoga.com",
+  "info@spoonfulofcomfort.com",
+  "news@e.lls.org",
+  "marci.suazo@pitkincounty.com",
+  "words@smtp3.dictionarybee.com",
+  "pcfjasgmxv@bretwinc.com",
+  "president@nmerit.net",
+  "searches@alerts.hotpads.com",
+  "orders@frootbat.com",
+  "no-reply@email.alltrails.com",
+  "customercare@downlitebedding.com",
+  "roku@email.roku.com",
+  "no-reply@email.point.me",
+  "noreply@mail.hellosign.com",
+  "promotions@us.greenworkstools.com",
+  "info@e.gavinnewsom.com",
+  "newsletter@johnhenric.com",
+  "yeah@pointsyeah.com",
+  "no-reply@substack.com",
+  "no-reply@em-s.dropbox.com",
+  "noreply@delsey.com",
+  "fax@cdlp.com",
+  "hello@touchtunesmail.com",
+  "max@stream.max.com",
+  "select_clinical_digest@email.medscape.com",
+  "noreply@em.modernatx.com",
+  "no-reply@marketing.mybirdbuddy.com",
+  "iloyfhszwr@applentre.com",
+  "info@announcements.soundcloud.com",
+  "tailflqwnbaknamdkzu@authenticbasmatirice.com",
+  "no-reply@getredo.com",
+  "store+4818629@t.shopifyemail.com",
+  "words@smtp1.dictionarybee.com",
+  "select_trending_alert_weekly@email.medscape.com",
+  "service@luonme.com",
+  "email@mail.medscapelive.com",
+  "ukfdtfakueehh@netonstr.com",
+  "noreply@notify.thinkific.com",
+  "newregs@allstarsportzone.com",
+  "hello@sugarfina.com",
+  "hello@my.smartydiets.com",
+  "spenserdora@daily.startdayhealthy.com",
+  "daily@sms.soundmindsecrets.com",
+  "daily@d.dailyhealthyinsights.com",
+  "recommendations@inspire.pinterest.com",
+  "newsletter@your.empoweredhealth365.com",
+  "my@dh.healthymindsetspace.com",
+  "rivaldials@219647078.mailchimpapp.com",
+  "qwbjjcqobs@schipacli.com",
+  "cooking@sp2.lazycooking.com",
+  "blog@your.femaleharmonyhub.com",
+  "daily@newsletter.myhomeweekly.com",
+  "become@e.heatlhynation.com",
+  "hello@inspiringquotes.com",
+  "daily@e.medicineandherbs.com",
+  "info@strength.org",
+  "support@point.me",
+  "newsletter@e.beautifulhealthywomen.com",
+  "your@med.medicalinsight24.com",
+  "sgitihpredvug@askcarexpert.com",
+  "newsletter@cwp.cosmicwellnesspath.com",
+  "daily@vts.vitatonicstore.com",
+  "jokes@smtp4.mydailyjoke.com",
+  "lets@b.hackdnacode.com",
+  "daily@the.instituteofhealthwellness.com",
+  "emails@daily.weightlosstipsforyou.net",
+  "thomas@wrp.wellnessreports24.com",
+  "news@daily.advisemejournal.com",
+  "8wyx2ve51ocdp7q@cabs.captialcurrency.com",
+  "cooking@smtp1.lazycooking.com",
+  "donotreply@mbc.ca.gov",
+  "send@buypeel.com",
+  "no-reply@mail.threads.net",
+  "info@updates.virginexperiencegifts.com",
+  "no-reply@express.medallia.com",
+  "cristina@liberandcompany.com",
+  "cooking@smtp2.lazycooking.com",
+  "words@sp1.dictionarybee.com",
+  "hello@yotoplay.com",
+  "siwaiolyuwabb@viewereye.com",
+  "headquarters@b.evo.com",
+  "noreply@reply.oklahoman.com",
+  "email@e.wineenthusiast.com",
+  "ribleabrasivegroupsk@chopinesprimality.com",
+  "newsletter@topshapenow.com",
+  "directvresearch@qualtrics-research.com",
+  "urroundsqueezepoint@chopinesprimality.com",
+  "words@smtp2.dictionarybee.com"
+]
