Update approved list via UI

--- a/approved_senders.json
+++ b/approved_senders.json
@@ -140,5 +140,258 @@
   "newsletter@topshapenow.com",
   "directvresearch@qualtrics-research.com",
   "urroundsqueezepoint@chopinesprimality.com",
-  "words@smtp2.dictionarybee.com"
+  "words@smtp2.dictionarybee.com",
+  "newsletter@news.yourmoneytoday.net",
+  "byqodzfzgczm@mmicampaigns.com",
+  "trivia@mail.needtoknowfacts.com",
+  "vinieranvitaisvellor@chopinesprimality.com",
+  "lltnkpaesbtdiy@anarkhist.com",
+  "email@e.wineexpress.com",
+  "one@email.chick-fil-a.com",
+  "info@yourmoneytoday.net",
+  "newsletter@email.yourmoneytoday.net",
+  "updates@mail.pressrundown.com",
+  "regardviolettabookne@chopinesprimality.com",
+  "narcismdisorde-space@quora.com",
+  "readingeaglesupport@newpharm.it",
+  "no-reply@app.ezyvet.com",
+  "vzwmail@ecrmemail.verizonwireless.com",
+  "mnirnnrpcwedjl@mywalrusapp.com",
+  "helmutlangvip@wths.net",
+  "infloserbso@wths.net",
+  "ionconsecratbagshoot@chopinesprimality.com",
+  "newsletter@email.topshapenow.com",
+  "hedellixstibo@ayersupply.com",
+  "support@truvy.com",
+  "qyfuaftlkkst@thekifureview.com",
+  "donotreply@toyotaconnectedservices.com",
+  "hello@email.deltadentalwa.com",
+  "disneydestinations@visit.disneydestinations.com",
+  "mcinfo@ups.com",
+  "oecwebrequest@okcoop.org",
+  "jxzrxagbbujsk@omrutah.com",
+  "words@smtp2.wordlancers.com",
+  "invitation@disneysurveys.com",
+  "newsletter@news.topshapenow.com",
+  "repdavemin@mail8.housecommunications.gov",
+  "donotreply@parkmobilesettlement.com",
+  "disneynotifications@experience.disneydestinations.com",
+  "dlr.guest.mail@disneyonline.com",
+  "risingabovenarcissism-space@quora.com",
+  "service@ifly.alaskaair.com",
+  "marketing@viscontis.com",
+  "daily@pagesofwellbeing.com",
+  "swqbyyyqwswtr@targetvoyage.com",
+  "tudnfanshopvbenefits@uni-mainz.de",
+  "newsletter@fineartamerica.com",
+  "programs@hmpcme.com",
+  "politicalrepulsiveshakyhugeds@countlandscape.net",
+  "gtibkscknztjp@omrutah.com",
+  "customerservice@lww.com",
+  "booksasville@free.at",
+  "notifications@email.deltadentalwa.com",
+  "attbxuvzmqvox@withhandle.com",
+  "connect@s.captainmentallica.com",
+  "heiforis41nee@free.at",
+  "info@communications.aircanada.com",
+  "pyramydairusa@free.at",
+  "daily@s.captainmentallica.com",
+  "emailescape@free.at",
+  "jokes@smtp3.floridasfunny.com",
+  "marketresearch@doximity.com",
+  "vintageloyaltydeals@free.at",
+  "overcomingnarcissismtogether-space@quora.com",
+  "oakstoneservice@mail.oakstone.com",
+  "orders@bobssportschalet.com",
+  "hello@email.health.amazon.com",
+  "massagewarehouseprosupport@free.at",
+  "daily-en@roamrovertravel.com",
+  "adaaghjzacyfb@artmayfair.com",
+  "qfvjhpklgkcvm@pharmbbs.com",
+  "ealsrv@free.at",
+  "notifications@evo.com",
+  "abekavzmemberhub@free.at",
+  "care@care.thefarmersdog.com",
+  "info@vote.org",
+  "partylitevzbonusoffers@free.at",
+  "redcavillationforegoer@info.m2.kindneskare.com",
+  "irygvbvxtmlqi@allergycarebk.com",
+  "vineyardmemberconnect@free.at",
+  "trivia@mail.tourtrivia.com",
+  "redcavillationforegoer@info.m5.kindneskare.com",
+  "no-reply@tumblr.com",
+  "everythingkitchenscmember@free.at",
+  "tog0a@free.at",
+  "mi5elli2sgod3iabl6ackan4c6isburis8t@kohls.banksunrifled.com",
+  "stacie@spikestactical.com",
+  "grandreviewofarmies-space@quora.com",
+  "rewards@customer-mail.smile.io",
+  "support@idrinkproducts.com",
+  "h&rsdck@free.at",
+  "jomashopnotifier@free.at",
+  "cdommunity@free.at",
+  "support@bobssportschalet.com",
+  "parentneareavessrewinntnes@fulgun.vatgametakes.com",
+  "curiosity-noreply@quora.com",
+  "info@democraticgovernors.org",
+  "yurogk@free.at",
+  "redcavillationforegoer@info.m1.kindneskare.com",
+  "hello@mail-2.hive.co",
+  "uniformadvantagekitinfo@mobilemodular.com",
+  "mailer@mail-14.hive.co",
+  "happyfamilyexclusivebrands@mobilemodular.com",
+  "woodsfdera@mobilemodular.com",
+  "newsletter@kinderzukunft.de",
+  "zawtnqpe6x83noc2@cabs.captialcurrency.com",
+  "percmschattoncouk@mobilemodular.com",
+  "info@foundhotels.com",
+  "discover@airbnb.com",
+  "yhwudbzdizscc@destinoelmundo.com",
+  "guarasn@smtradeportal.com",
+  "newsletter@med.medipedia24.com",
+  "smokersoutletonlinefeedback@smtradeportal.com",
+  "angela@cdlandtrust.org",
+  "welcome@nysun.com",
+  "empaulayou201ail@smtradeportal.com",
+  "zgcmrkergqtrls@anarkhist.com",
+  "hdbrlelzokgh@gavinrrice.com",
+  "bfwofsozjzvjt@paykartim.com",
+  "zkenqeqviegax@thegrayhat.com",
+  "cgoxmjxcxhml@isoflexmg.com",
+  "trueloveconquersall-space@quora.com",
+  "greatbigcanvasresearch@smtradeportal.com",
+  "listserv@waterfordmi.gov",
+  "aaycrs@smtradeportal.com",
+  "ydgapwtatvgvu@amalanhikmah.com",
+  "store+57409896626@t.shopifyemail.com",
+  "gfitfywkkqrjg@pacifichhs.com",
+  "yqkxbunkrmape@mustikakelapa.com",
+  "espnplus@trx.mail2.espnplus.com",
+  "hello@mailer.spune.com",
+  "vailresorts@express.medallia.com",
+  "xojzfuwxbpmkd@clozelibro.com",
+  "redcavillationforegoer@info.m4.kindneskare.com",
+  "ssloajgpqbbr@modestcondos.com",
+  "mailer@mail-2.hive.co",
+  "julia@buypeel.com",
+  "rialswr@skinny.co.nz",
+  "theperformersmail.beehiiv.com@uh.edu",
+  "nbsptzptyydnh@ubidibs.com",
+  "sosrt@skinny.co.nz",
+  "cs.metrailerp@skinny.co.nz",
+  "forefitarabesquerious@majesticglucos.net",
+  "lfvxzqaoqbreymdfqia8hpjdmivtf@kohls.banksunrifled.com",
+  "icloudplus@insideapple.apple.com",
+  "mar.ksplacekau56ai@skinny.co.nz",
+  "dicrtfifsxpfzg@qfrees.com",
+  "evzjddodnqmxd@maimaishuo.com",
+  "mhiwaplxfmwzc@palmarcafe.com",
+  "unreportedworld-space@quora.com",
+  "repmikesteele@updates.leg.wa.gov",
+  "vkotgahasnmlqa@motorcuramazan.com",
+  "clwjkhtidadxa@kitamuratakumi.com",
+  "vklxufwgemhrh@huangyichen.com",
+  "whogjrwqornwq@cairoseo.com",
+  "tcojtzsitetuv@chaostips.com",
+  "thrivingmarrieagees@filmupdatehub.com",
+  "aefpysobqksnkv@zoemen.com",
+  "iyuwtvolffqpo@extremeinsight.com",
+  "no-reply@shopperapproved.com",
+  "qfhrisepnjbkn@minicrucigrama.com",
+  "rxphjckhsmwjk@linewiki.com",
+  "no_reply@communications.paypal.com",
+  "zxwpvlyzvkggw@jobsiana.com",
+  "amkvkmjafinvgr@mkristof.com",
+  "qaonkpyfnd@dowflint.com",
+  "no-reply@is.email.nextdoor.com",
+  "tntybsakcesr@phipressbox.com",
+  "yrrgdieecyfaq@basaclothing.com",
+  "senmurray@murray.senate.gov",
+  "zcmewtckdpndg@timetofethiye.com",
+  "kprjbbtpjoavu@mizarack.com",
+  "eisheomjbrkqj@laxhawk.com",
+  "isugvmcjot@bogazvilla.com",
+  "acgjsvpkqywdxf@zenmoldes.com",
+  "gbqudyguhlzueh@mywalrusapp.com",
+  "fazyshnlfsrvv@photobookgenie.com",
+  "retgfhdv12f@mytickettracker.com",
+  "oorzdbkdccqtf@aratamackenyu.com",
+  "reeofkwnqaoql@targetvoyage.com",
+  "ztpvmszqsjasr@gamersozluk.com",
+  "utlcbcnkwuvyl@qualityprivacy.com",
+  "djzemklsujrxx@thietbibaochay.com",
+  "xluqfkiuhf@deanoandco.com",
+  "iijenxyvbpnij@ayersupply.com",
+  "communityrelations@pitkincounty.com",
+  "noreply@hosting-zdjec.com",
+  "pukpstnfrd@insurlocal.com",
+  "redcavillationforegoer@info.m3.kindneskare.com",
+  "vjhlczwsqf@kinlockhh.com",
+  "vxvyrvlcamyrbb@fbredacao.com",
+  "hnnogdkhll@dowandco.com",
+  "skdeha@mytickettracker.com",
+  "qypeohgmmhxyg@hawwastyle.com",
+  "yrkyzdafwv@brightpointit.com",
+  "latestnewsupdates@destinationdreamers.net",
+  "wmkdpsufrblkt@barringerpoint.com",
+  "saesyq@hcamerica.com",
+  "speartlandals@hcamerica.com",
+  "jokes@smtp2.masterofwit.com",
+  "djdxfgkcfpyfm@cincinaura.com",
+  "elfiefqakkhrp@obwave.com",
+  "yqegwukjzzppc@yoshizawaryo.com",
+  "ghpkpxkdxz@hogindustries.com",
+  "gztyfxlhvd@sroams.com",
+  "hello@marketing.gofundme.com",
+  "viprewards@hcamerica.com",
+  "xsjzxfxcstztq@dpessltd.com",
+  "jhoauqyemeor@positivelywrong.com",
+  "tlzgrljwsn@otamajakushi.com",
+  "vnypyvvftasuc@phianderic.com",
+  "pmvvlutmon@kengefalas.com",
+  "info@myaccount.ring.com",
+  "mzpibuwqjl@spespace.com",
+  "cxssqjjxbrkrc@pagesglobal.com",
+  "kzxqlvfdlg@thelittlestgroom.com",
+  "dgahvvmjfnoktq@myrarest.com",
+  "orre@hcamerica.com",
+  "bkzzmkaprkdiz@ermcloud.com",
+  "oqljrzlzxw@gotkdo.com",
+  "vxudjdwrgtsn@gupilya.com",
+  "owfgjenxmd@duelpianos.com",
+  "target@express.medallia.com",
+  "no-2ndswng@hcamerica.com",
+  "ga.linternaute.com@procreditbank.rs",
+  "bietczdfbjosu@chennaiwap.com",
+  "potterybarn@o.potterybarn.com",
+  "customerservicxs4h9ce@hydropoolhottubs.com",
+  "flozwihrjtqpc@viewereye.com",
+  "infndunio9nn@hcamerica.com",
+  "emails.macys.com@procreditbank.rs",
+  "llofszkxmjvv@serverjt.com",
+  "donotreply@medentnotifications2.com",
+  "bejvqmtgok@woaden.com",
+  "iodmmdsxwq@pcspaving.com",
+  "wopkyosaxf@paymentgw.com",
+  "kilufqvdmh@beegullapp.com",
+  "contact-staedterstyle.com@procreditbank.rs",
+  "shop@hydropoolhottubs.com",
+  "newsvalentinedaygifts@hydropoolhottubs.com",
+  "jokes@sp1.masterofwit.com",
+  "vsfdrlbifqjnn@hopefulsoil.com",
+  "charleskeithfromnews.echarleskeith.com@hydropoolhottubs.com",
+  "reply@drivers-toyotaims.com",
+  "care@struthealth.com",
+  "info@patient.questdiagnostics.com",
+  "support@trueclassictees.com",
+  "homepagenewsfrommultibriefs.com@procreditbank.rs",
+  "mailer@mail-5.hive.co",
+  "lhvmajsgcvkce@tangmoyan.com",
+  "gnndhipcnp@sakhbir.com",
+  "xzsnxhvjuvqcn@thaionestop.com",
+  "fwrd.service@amtrakvacations.com",
+  "david.rice.peoplemanagingpeople@amtrakvacations.com",
+  "wtgukuatkromr@firstnlp.com",
+  "lifjonfmmvtoq@kefwud.com",
+  "hello.lulus.com@wasteprousa.com"
 ]
