Update approved list via UI

--- a/approved_senders.json
+++ b/approved_senders.json
@@ -393,5 +393,51 @@
   "david.rice.peoplemanagingpeople@amtrakvacations.com",
   "wtgukuatkromr@firstnlp.com",
   "lifjonfmmvtoq@kefwud.com",
-  "hello.lulus.com@wasteprousa.com"
+  "hello.lulus.com@wasteprousa.com",
+  "nqeddfqrpu@combatride.com",
+  "requests@judge.me",
+  "atlqxwxpzkdtb@comeonfeelthebern.com",
+  "wildapricot.com@ci.auburn.in.us",
+  "ewjddktpjqnly@eleopo.com",
+  "gznwtsfgaswrxf@fbredacao.com",
+  "jokes@smtp1.masterofwit.com",
+  "gothamfc.com@ci.auburn.in.us",
+  "magazineshop@amtrakvacations.com",
+  "jqszjbkgxehf@bonsaiviet.com",
+  "newslettercolumbiasportswearfromemarsys.com@amtrakvacations.com",
+  "hhbrewi@ci.auburn.in.us",
+  "messagebox@amtrakvacations.com",
+  "jecokktovfkrz@mmicampaigns.com",
+  "asemdafpzxsokc@pzltn.com",
+  "nvsyndrome-space@quora.com",
+  "pvwbjiklngbbnp@zenmoldes.com",
+  "brervlwlarebs@basaclothing.com",
+  "bwvntdaykiexf@viewereye.com",
+  "ciauction@ci.auburn.in.us",
+  "newsletter.psg.fr@amtrakvacations.com",
+  "vzfskkknsqztl@omrutah.com",
+  "newsletterhobbssalefromcdn.uk.exponea.com@amtrakvacations.com",
+  "artofflashfictionstellarpath.com@amtrakvacations.com",
+  "rmoxrvfgxdxjc@linewiki.com",
+  "rdlarenxktcrju@teskgo.com",
+  "noreply@opap.gr",
+  "vusmhpunqqbjjz@myrarest.com",
+  "pgglmcjbutxdq@cincinaura.com",
+  "enews@doctors-digest.com",
+  "omjvegfnnfroq@villamacaradi.com",
+  "gctwhnsyqvqkh@buildwithmiso.com",
+  "umlzinqsmgoobx@paykartim.com",
+  "help@parkwhiz.com",
+  "ahscspikrlzcjq@foreverbrewery.com",
+  "ordersbrittoworldbritto.com@radford.edu",
+  "news@usnn.com",
+  "info@petrescuebyjudy.com",
+  "pxskhrlvknnz@clozelibro.com",
+  "fashiontrendsthatwillrulewinter2024@foodingredientsyoucanmakethesedelicioushomelarabars.tyogygordimban.com",
+  "vlgwrcffmftwn@artmayfair.com",
+  "marketingemail.bacelic.hr@radford.edu",
+  "uuukykfzfrua@rawmirror.com",
+  "massmutualwellrider@mm.massmutual.com",
+  "cmpbcsqztsffn@leosusser.com",
+  "newyorker@nysed.gov"
 ]
