Update approved list via UI

--- a/approved_senders.json
+++ b/approved_senders.json
@@ -439,5 +439,32 @@
   "uuukykfzfrua@rawmirror.com",
   "massmutualwellrider@mm.massmutual.com",
   "cmpbcsqztsffn@leosusser.com",
-  "newyorker@nysed.gov"
+  "newyorker@nysed.gov",
+  "ashadornfest@nysed.gov",
+  "rcyaicmdmk@brightpointit.com",
+  "eusxwcqewkfnsz@anarkhist.com",
+  "paytqafzdvpxu@ubidibs.com",
+  "jgquqkmotzpgq@mulecation.com",
+  "friends@utrecsports.org",
+  "santonishoes.hubspotemail@nysed.gov",
+  "onxikpbimmiqf@dpessltd.com",
+  "bestbuy.email.bestbuy@nysed.gov",
+  "fhlizjvvlhlfs@dailyinspirenews.com",
+  "news.historicalempo@nysed.gov",
+  "dirttodinner@bukopin.co.id",
+  "jskqcwrmyugzmj@minicrucigrama.com",
+  "hekuowvivvzsw@photobookgenie.com",
+  "afterschool+after-school@nysed.gov",
+  "senator@murray.senate.gov",
+  "tfuzpgriknonoa@drtheader.com",
+  "wthlbkupvowsjr@zoemen.com",
+  "hwueuvvynd@hogindustries.com",
+  "vxfynpdyjfgvva@castilabs.com",
+  "hdvbnhprdaoh@trailsideexpo.com",
+  "wkslsigwqnvy@serverjt.com",
+  "ecco.usa@ucla.edu",
+  "xuiaemwlmhfpa@hopefulsoil.com",
+  "ghjxiktkru@spespace.com",
+  "uwojuxmmci@woaden.com",
+  "store+63723077787@t.shopifyemail.com"
 ]
