Update approved list via UI

--- a/approved_senders.json
+++ b/approved_senders.json
@@ -466,5 +466,31 @@
   "xuiaemwlmhfpa@hopefulsoil.com",
   "ghjxiktkru@spespace.com",
   "uwojuxmmci@woaden.com",
-  "store+63723077787@t.shopifyemail.com"
+  "store+63723077787@t.shopifyemail.com",
+  "vnlozrhnmx@tzset.com",
+  "futuresocial@ucla.edu",
+  "nleyosapucjq@amalanhikmah.com",
+  "paqfzeuisq@duelpianos.com",
+  "bmecpeqheruf@whitevit.com",
+  "jqmiisqgflwuqv@jobsiana.com",
+  "szjfgzfkgeva@isoflexmg.com",
+  "xbuwultrpm@thelittlestgroom.com",
+  "dqjtrevlpypcv@palamall.com",
+  "pcoibetvmszf@thekifureview.com",
+  "tlitewkfhl@paymentgw.com",
+  "llljxmaguckdv@maimaishuo.com",
+  "skaafbrjax@beegullapp.com",
+  "jiigcciateaggi@qfrees.com",
+  "eastlothiancurrentconnectintercom.com@ucla.edu",
+  "burpeegardens@jtatkinson.co.uk",
+  "ksvydthobkxah@phianderic.com",
+  "bgiiqosjzqsdl@bonsaiviet.com",
+  "pjxzyojarb@woaden.com",
+  "syadnafkas@pseglistore.com",
+  "fvwpbmhpuapfl@laxhawk.com",
+  "newslettersailthru.com@jtatkinson.co.uk",
+  "reviews@yotpo.com",
+  "momxytwpsi@dowandco.com",
+  "lkmfyizuyxjar@modestcondos.com",
+  "customerservice@chicos.com"
 ]
